Turns out I didn't solve the problem after all, still getting my content cut off. Refined my article images a little so they work better

--- a/style.css
+++ b/style.css
@@ -177,18 +177,6 @@ header {
   padding: 0 1.5rem;
 }
 
-.acontainer img {
-  width: 100%
-}
-
-.acontainerimg {
-  min-width: 35rem;
-  max-width: 35rem;
-  height: 30rem;
-  transform: translateX (-8rem);
-  position: relative;
-}
-
 .acontainerimg img {
   width: 100%;
   height: 100%;
@@ -205,14 +193,6 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: .8rem;
-}
-
-.ainfo img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
   border-radius: .8rem;
 }
 
